# argon-db

./: .gitignore  Cargo.toml  README.md  std.out
argon-server/: Cargo.toml
argon-server/src/: lib.rs  main.rs
argon-server/src/block/: mod.rs
argon-server/src/block_cache/: mod.rs
argon-server/src/cell/: cell.rs  key.rs  key_type.rs  mod.rs  value.rs
argon-server/src/config/: config_provider.rs  mod.rs
argon-server/src/core/: config.rs  core_ctl.rs  log.rs  log_ctl.rs  mod.rs
argon-server/src/database/: commitlog.rs  keyspace.rs  memstore.rs  mod.rs  mvcc.rs  table.rs
argon-server/src/db/: mod.rs  mvcc.rs  op_registry.rs  system_state.rs
argon-server/src/execution/: exec_pool_ctl.rs  exec_pool_task.rs  mod.rs  mutation.rs  mutation_execution_thread.rs
argon-server/src/lock/: mod.rs
argon-server/src/memstore/: memstore.rs  mod.rs  segment.rs  segment_ctl.rs
argon-server/src/shell/: mod.rs
argon-server/src/store_file/: writer.rs
argon-server/src/table/: mod.rs  schema_ctl.rs  table_ctl.rs
argon-server/src/utils/: mod.rs
argon-server/src/wal/: mod.rs  segment.rs  wal_ctx.rs  wal_manager.rs  wal_state.rs  wal_writer.rs
argondb/: Cargo.toml
argondb/src/: db_bootstrap.rs  db_ctx.rs  errors.rs  exit.rs  init.rs  main.rs  shutdown.rs  signals_handler.rs  system_tables.rs
argondb/src/connectors/: grpc.rs
argondb/src/init/: init_system_tables.rs  init_thread.rs  init_user_tables.rs  mod.rs
argondb/src/ops/: create_table.rs  insert_into.rs  mod.rs
argondb/src/supervisor/: lifecycle.rs  mod.rs  supervisor_thread.rs  system_ctx.rs
libargonconnector-grpc/: Cargo.toml  build.rs
libargonconnector-grpc/proto/: argondb.proto  create-table.proto  insert-mutations.proto  list-tables.proto  mutate-row.proto  read-row.proto  scan-table.proto  types.proto
libargonconnector-grpc/src/: lib.rs
libargondb/: Cargo.toml
libargondb/src/: argonfile.rs  data_types.rs  db_ctx.rs  db_state.rs  global_state.rs  in_memory_mutation.rs  io.rs  lib.rs  memtable.rs  module.rs  mutation_executor.rs  wal.rs
libargondb/src/argonfile/: block.rs  block_ptr.rs  builder.rs  error.rs  magic.rs  mod.rs  reader.rs  row.rs  stats.rs  summary.rs  trailer.rs  utils.rs
libargondb/src/argonfs/: argon_fs.rs  argon_fs_worker_pool.rs  argonfile_sstable.rs  argonfs_scanner.rs  block_cache_buffer_allocator.rs  buffer_allocator.rs  cached_sstable_reader.rs  config.rs  factory.rs  fs_scan.rs  memtable_flusher.rs  mod.rs  on_heap_buffer_allocator.rs  path_factory.rs  sstable_compactor.rs  sstable_format_reader.rs
libargondb/src/block_cache/: block_buffer.rs  block_cache.rs  block_lock.rs  block_map.rs  block_view.rs  freelist.rs  mod.rs  page_buffer.rs  wait_queue.rs
libargondb/src/catalog/: catalog.rs  catalog_state.rs  client.rs  mod.rs  state.rs  table_name.rs
libargondb/src/connector/: mod.rs
libargondb/src/core/: block_cache.rs  buffer_pool.rs  clock_sweep.rs  mod.rs
libargondb/src/io/: block_cache.rs  mod.rs  page_manager.rs  read.rs  read_thread.rs
libargondb/src/kv/: config.rs  error.rs  factory.rs  flusher.rs  memtable_factory.rs  mod.rs  mutation.rs  primary_key.rs  scan.rs  schema.rs  sstable.rs  table.rs  table_state.rs
libargondb/src/op_engine/: mod.rs  runtime.rs
libargondb/src/ops/: create_table.rs  insert.rs  mod.rs  select.rs
libargondb/src/query_parser/: mod.rs
libargondb/src/runtime/: future.rs
libargondb/src/schema/: key_schema.rs  mod.rs
libargondb/src/state/: db.rs  mod.rs  table.rs
libargondb/src/storage/: memtable.rs  mod.rs  state.rs
(+347 files in other folders)
