[package]
name = "argon-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1.3"
num_cpus = "1.16.0"
serde = { version = "1.0.204", features = ["derive"]}
toml = "0.8.19"
