[package]
name = "argon-server"
version = "0.1.0"
edition = "2021"
default-run = "shell"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "shell"

[[bin]]
name = "initdb"

[dependencies]
bytes = "1.7.1"
byteorder = "1.5.0"
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1.3"
dashmap = "6.0.1"
log = "0.4.22"
log4rs = "1.3.0"
md-5 = "0.10.6"
num_cpus = "1.16.0"
serde = { version = "1.0.204", features = ["derive"] }
signal-hook = "0.3.17"
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["v3"] }
