[package]
name = "argondb"
version = "0.1.0"
edition = "2024"

[dependencies]
async-io = "2.6.0"
async-trait = "0.1.89"
signal-hook = { version = "0.4.1", features = ["extended-siginfo"] }
libargondb = { path = "../libargondb" }
libargonrt = { path = "../libargonrt" }
libargonconnector-grpc = { path = "../libargonconnector-grpc" }
prost-types = "0.14.3"
smol = "2.0.2"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-reflection = "0.14.2"