[package]
name = "libargonconnector-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
tonic = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.3"
tonic-prost = "0.14.2"
libargondb = { path = "../libargondb" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["trace"] }

[build-dependencies]
tonic-prost-build = "0.14.2"