[package]
name = "libargondb"
version = "0.1.0"
edition = "2024"

[dependencies]
libargonrt = { path = "../libargonrt" }
bitflags = "2.9.4"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-skiplist = "0.1.3"
libc = "0.2.172"
bytemuck = { version = "1.23.2", features = ["derive"] }
arc-swap = "1.7.1"
async-lock = "3.4.1"
async-trait = "0.1.89"
crc32c = "0.6.8"
bloomfilter = "3.0.1"
memmap = "0.7.0"
bytes = "1.10.1"
async-executor = "1.13.3"
futures = "0.3.31"